k8s/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: vost-tw
spec:
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:4
        resources:
          limits:
            memory: "1Gi"
            cpu: "800m"
          requests:
            memory: "128Mi"
            cpu: "10m"
        volumeMounts:
          - name: host
            mountPath: /data/db
        livenessProbe:
          exec:
            command:
            - mongo
            - --eval
            - "db.adminCommand('ping')"
          initialDelaySeconds: 30
          failureThreshold: 2
          timeoutSeconds: 2
        readinessProbe:
          exec:
            command:
            - mongo
            - --eval
            - "db.adminCommand('ping')"
          initialDelaySeconds: 30
          failureThreshold: 2
          timeoutSeconds: 2
        ports:
        - containerPort: 27017
      volumes:
        - name: host
          hostPath:
            path: /mnt/db
            type: DirectoryOrCreate
