k8s/api-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tw-api
  namespace: vost-tw
spec:
  selector:
    matchLabels:
      app: tw-api
  template:
    metadata:
      labels:
        app: tw-api
    spec:
      containers:
      - name: tw-api
        image: suvl/vost-tw:0.10.2
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "10m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tw-api-service
  namespace: vost-tw
spec:
  selector:
    app: tw-api
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: tw-api-ingress
 namespace: vost-tw
spec:
 rules:
 - host: vost-tw.jtsoar.es
   http:
      paths:
      - path: /
        backend:
          serviceName: tw-api-service
          servicePort: 80
